--- a/.editorconfig
+++ b/.editorconfig
@@ -4,15 +4,11 @@
 
 root = true
 
-
 [*]
 
 # Change these settings to your own preference
 indent_style = space
-indent_size = 2
-
-[*.json]
-indent_size = 2
+indent_size = 4
 
 # We recommend you to keep these unchanged
 end_of_line = lf
@@ -20,5 +16,9 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.json]
+
+indent_size = 2
+
 [*.md]
-trim_trailing_whitespace = false
+trim_trailing_whitespace = true
