--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,26 +1,30 @@
 {
-  "name": "__MSG_appName__",
-  "version": "0.0.1",
   "manifest_version": 2,
+  "name": "__MSG_appName__",
+  "version": "0.0.11",
+  "default_locale": "en",
   "description": "__MSG_appDescription__",
   "icons": {
     "16": "images/icon-16.png",
     "128": "images/icon-128.png"
   },
-  "default_locale": "en",
+  "author": "Taras Romaniv",
+  "permissions": [
+    "management"
+  ],
+  "chrome_url_overrides": {
+    "newtab": "newtab.html"
+  },
+  "homepage_url": "http://taras-romaniv.blogspot.com",
+  "minimum_chrome_version": "40",
   "background": {
     "scripts": [
       "scripts/chromereload.js",
       "scripts/background.js"
     ]
   },
-  "page_action": {
-    "default_icon": {
-      "19": "images/icon-19.png",
-      "38": "images/icon-38.png"
-    },
-    "default_title": "charttab",
-    "default_popup": "popup.html"
-  },
-  "options_page": "options.html"
+  "options_ui": {
+    "page": "options.html",
+    "chrome_style": true
+  }
 }
