--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "charttab",
+  "name": "ChartTab",
   "version": "0.0.0",
+  "description": "Motivational charts on the Chrome's new tab page.",
+  "repository": "https://github.com/",
+  "license": "MIT",
   "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-jshint": "~0.9.2",
-    "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-connect": "~0.7.1",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-htmlmin": "~0.2.0",
-    "grunt-bower-install": "~1.0.0",
-    "grunt-contrib-imagemin": "~0.7.1",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-usemin": "~2.1.0",
-    "grunt-mocha": "~0.4.10",
-    "grunt-svgmin": "~0.4.0",
-    "grunt-concurrent": "~0.5.0",
-    "load-grunt-tasks": "~0.4.0",
-    "time-grunt": "~0.3.1",
-    "jshint-stylish": "~0.1.5",
-    "grunt-chrome-manifest": "~0.2.0",
-    "grunt-contrib-compress": "~0.9.1"
+    "grunt": "0.4.x",
+    "grunt-contrib-copy": "0.8.x",
+    "grunt-contrib-concat": "0.5.x",
+    "grunt-contrib-uglify": "0.9.x",
+    "grunt-contrib-jshint": "0.11.x",
+    "grunt-contrib-cssmin": "0.12.x",
+    "grunt-contrib-connect": "0.10.x",
+    "grunt-contrib-clean": "0.6.x",
+    "grunt-contrib-htmlmin": "0.4.x",
+    "grunt-bower-install": "1.6.x",
+    "grunt-contrib-imagemin": "0.9.x",
+    "grunt-contrib-watch": "0.6.x",
+    "grunt-contrib-jasmine": "0.8.x",
+    "grunt-usemin": "3.0.x",
+    "grunt-svgmin": "2.0.x",
+    "grunt-concurrent": "1.0.x",
+    "load-grunt-tasks": "3.2.x",
+    "time-grunt": "1.2.x",
+    "jshint-stylish": "2.0.x",
+    "grunt-chrome-manifest": "0.2.x",
+    "grunt-contrib-compress": "0.13.x"
   },
   "engines": {
-    "node": ">=0.8.0"
+    "node": ">=0.10.0"
   }
 }
