--- a/package.json
+++ b/package.json
@@ -7,26 +7,27 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "0.4.x",
-    "grunt-contrib-copy": "0.8.x",
-    "grunt-contrib-concat": "0.5.x",
-    "grunt-contrib-uglify": "0.9.x",
-    "grunt-contrib-jshint": "0.11.x",
-    "grunt-contrib-cssmin": "0.12.x",
-    "grunt-contrib-connect": "0.10.x",
-    "grunt-contrib-clean": "0.6.x",
-    "grunt-contrib-htmlmin": "0.4.x",
-    "grunt-bower-install": "1.6.x",
-    "grunt-contrib-imagemin": "0.9.x",
-    "grunt-contrib-watch": "0.6.x",
-    "grunt-contrib-jasmine": "0.8.x",
-    "grunt-usemin": "3.0.x",
-    "grunt-svgmin": "2.0.x",
-    "grunt-concurrent": "1.0.x",
-    "load-grunt-tasks": "3.2.x",
-    "time-grunt": "1.2.x",
-    "jshint-stylish": "2.0.x",
     "grunt-chrome-manifest": "0.2.x",
-    "grunt-contrib-compress": "0.13.x"
+    "grunt-concurrent": "1.0.x",
+    "grunt-contrib-clean": "0.6.x",
+    "grunt-contrib-compress": "0.13.x",
+    "grunt-contrib-concat": "0.5.x",
+    "grunt-contrib-connect": "0.10.x",
+    "grunt-contrib-copy": "0.8.x",
+    "grunt-contrib-cssmin": "0.12.x",
+    "grunt-contrib-htmlmin": "0.4.x",
+    "grunt-contrib-imagemin": "0.9.x",
+    "grunt-contrib-jasmine": "0.8.x",
+    "grunt-contrib-jshint": "0.11.x",
+    "grunt-contrib-uglify": "0.9.x",
+    "grunt-contrib-watch": "0.6.x",
+    "grunt-ng-annotate": "0.10.x",
+    "grunt-svgmin": "2.0.x",
+    "grunt-usemin": "3.0.x",
+    "grunt-wiredep": "2.0.x",
+    "jshint-stylish": "2.0.x",
+    "load-grunt-tasks": "3.2.x",
+    "time-grunt": "1.2.x"
   },
   "engines": {
     "node": ">=0.10.0"
