--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,8 @@
 {
   "name": "ChartTab",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "angular-material": "0.9.x"
+  },
   "devDependencies": {}
 }
