--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "ChartTab",
   "version": "0.0.0",
   "dependencies": {
-    "angular-material": "0.9.x"
+    "angular-material": "0.9.x",
+    "livereload": "2.2.x"
   },
   "devDependencies": {}
 }
