--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "__MSG_appName__",
-  "version": "0.0.33",
+  "version": "0.0.34",
   "default_locale": "en",
   "description": "__MSG_appDescription__",
   "icons": {
@@ -22,5 +22,6 @@
   "options_ui": {
     "page": "options.html",
     "chrome_style": true
-  }
+  },
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
