--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "__MSG_appName__",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "default_locale": "en",
   "description": "__MSG_appDescription__",
   "icons": {
@@ -12,7 +12,8 @@
   "author": "Taras Romaniv",
   "permissions": [
     "management",
-    "storage"
+    "storage",
+    "bookmarks"
   ],
   "chrome_url_overrides": {
     "newtab": "newtab.html"
