--- a/package.json
+++ b/package.json
@@ -6,28 +6,28 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
-    "grunt": "0.4.x",
-    "grunt-chrome-manifest": "0.2.x",
-    "grunt-concurrent": "1.0.x",
-    "grunt-contrib-clean": "0.6.x",
-    "grunt-contrib-compress": "0.13.x",
-    "grunt-contrib-concat": "0.5.x",
-    "grunt-contrib-connect": "0.10.x",
-    "grunt-contrib-copy": "0.8.x",
-    "grunt-contrib-cssmin": "0.12.x",
-    "grunt-contrib-htmlmin": "0.4.x",
-    "grunt-contrib-imagemin": "0.9.x",
-    "grunt-contrib-jasmine": "0.8.x",
-    "grunt-contrib-jshint": "0.11.x",
-    "grunt-contrib-uglify": "0.9.x",
-    "grunt-contrib-watch": "0.6.x",
-    "grunt-ng-annotate": "0.10.x",
-    "grunt-svgmin": "2.0.x",
-    "grunt-usemin": "3.0.x",
-    "grunt-wiredep": "2.0.x",
-    "jshint-stylish": "2.0.x",
-    "load-grunt-tasks": "3.2.x",
-    "time-grunt": "1.2.x"
+    "grunt": "0.4.5",
+    "grunt-chrome-manifest": "0.3.0",
+    "grunt-concurrent": "2.0.3",
+    "grunt-contrib-clean": "0.6.0",
+    "grunt-contrib-compress": "0.13.0",
+    "grunt-contrib-concat": "0.5.1",
+    "grunt-contrib-connect": "0.10.1",
+    "grunt-contrib-copy": "0.8.1",
+    "grunt-contrib-cssmin": "0.14.0",
+    "grunt-contrib-htmlmin": "0.5.0",
+    "grunt-contrib-imagemin": "0.9.4",
+    "grunt-contrib-jasmine": "0.9.2",
+    "grunt-contrib-jshint": "0.11.3",
+    "grunt-contrib-uglify": "0.9.2",
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-ng-annotate": "1.0.1",
+    "grunt-svgmin": "2.0.1",
+    "grunt-usemin": "3.1.1",
+    "grunt-wiredep": "2.0.0",
+    "jshint-stylish": "2.0.1",
+    "load-grunt-tasks": "3.3.0",
+    "time-grunt": "1.2.1"
   },
   "engines": {
     "node": ">=0.10.0"
