--- a/.jscsrc
+++ b/.jscsrc
@@ -1,83 +1,8 @@
 {
-    "requireCurlyBraces": [
-        "else",
-        "for",
-        "while",
-        "do",
-        "try",
-        "catch"
-    ],
-    "requireCamelCaseOrUpperCaseIdentifiers": true,
-    "maximumLineLength": {
-        "value": 120,
-        "allowComments": true,
-        "allowRegex": true
-    },
+    "preset": "google",
+    "maxErrors": 999,
     "validateIndentation": 4,
-    "validateQuoteMarks": "'",
-    "disallowMultipleLineStrings": true,
-    "disallowMixedSpacesAndTabs": true,
-    "disallowTrailingWhitespace": true,
-    "disallowSpaceAfterPrefixUnaryOperators": true,
-    "disallowKeywordsOnNewLine": ["else"],
-    "requireSpaceAfterKeywords": [
-        "if",
-        "else",
-        "for",
-        "while",
-        "do",
-        "switch",
-        "return",
-        "try",
-        "catch"
-    ],
-    "requireSpaceBeforeBinaryOperators": [
-        "=",
-        "+=",
-        "-=",
-        "*=",
-        "/=",
-        "%=",
-        "<<=",
-        ">>=",
-        ">>>=",
-        "&=",
-        "|=",
-        "^=",
-        "+=",
-        "+",
-        "-",
-        "*",
-        "/",
-        "%",
-        "<<",
-        ">>",
-        ">>>",
-        "&",
-        "|",
-        "^",
-        "&&",
-        "||",
-        "===",
-        "==",
-        ">=",
-        "<=",
-        "<",
-        ">",
-        "!=",
-        "!=="
-    ],
-    "requireSpaceAfterBinaryOperators": true,
-    "requireSpacesInConditionalExpression": true,
-    "requireSpaceBeforeBlockStatements": true,
-    "requireSpacesInForStatement": true,
-    "requireLineFeedAtFileEnd": true,
-    "requireSpacesInFunctionExpression": {
-        "beforeOpeningCurlyBrace": true
-    },
-    "disallowSpacesInsideObjectBrackets": "all",
-    "disallowSpacesInsideArrayBrackets": "all",
-    "disallowSpacesInsideParentheses": true,
-    "disallowMultipleLineBreaks": true,
-    "disallowNewlineBeforeBlockStatements": true
+    "maximumLineLength": 120,
+    "requireDotNotation": null,
+    "jsDoc": null
 }
