--- a/bower.json
+++ b/bower.json
@@ -2,10 +2,14 @@
   "name": "ChartTab",
   "version": "0.0.0",
   "dependencies": {
-    "angular-material": "0.11.1",
+    "angular-material": "1.0.7",
     "livereload": "2.2.1",
-    "angular-chart.js": "0.8.4",
-    "angular-moment": "0.10.3"
+    "angular-chart.js": "0.9.0",
+    "angular-moment": "0.10.3",
+    "angular": "1.4.x",
+    "angular-animate": "1.4.x",
+    "angular-aria": "1.4.x",
+    "angular-messages": "1.4.x"
   },
   "devDependencies": {}
 }
