--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "__MSG_appName__",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "default_locale": "en",
   "description": "__MSG_appDescription__",
   "icons": {
@@ -13,7 +13,8 @@
   "permissions": [
     "management",
     "storage",
-    "bookmarks"
+    "bookmarks",
+    "downloads"
   ],
   "chrome_url_overrides": {
     "newtab": "newtab.html"
