--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "Motivational charts on the Chrome's new tab page.",
   "license": "MIT",
   "dependencies": {},
+  "scripts": {
+    "debug": "grunt debug",
+    "build": "grunt build",
+    "test": "./node_modules/.bin/eslint app/"
+  },
   "devDependencies": {
+    "eslint": "4.18.2",
+    "eslint-plugin-angular": "3.3.0",
     "grunt": "1.0.2",
     "grunt-chrome-manifest": "0.3.0",
     "grunt-concurrent": "2.3.1",
@@ -16,18 +23,16 @@
     "grunt-contrib-cssmin": "2.2.1",
     "grunt-contrib-htmlmin": "2.4.0",
     "grunt-contrib-imagemin": "2.0.1",
-    "grunt-contrib-jshint": "1.1.0",
-    "grunt-contrib-uglify": "3.3.0",
+    "grunt-contrib-uglify-es": "git://github.com/gruntjs/grunt-contrib-uglify.git#harmony",
     "grunt-contrib-watch": "1.0.0",
     "grunt-ng-annotate": "3.0.0",
     "grunt-svgmin": "5.0.0",
     "grunt-usemin": "3.1.1",
     "grunt-wiredep": "3.0.1",
-    "jshint-stylish": "2.2.1",
     "load-grunt-tasks": "3.5.2",
     "time-grunt": "1.4.0"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=8.9.0"
   }
 }
