[0.4.0] - add a date-pickers - add a hint for last updated date/time - fix the tab title - auto-focus the "value" input - update some dependencies

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
   },
   "globals": {
     "angular": false,
-    "chrome": false
+    "chrome": false,
+    "moment": false
   },
   "extends": [
     "eslint:recommended",
