update dependencies, add packege-lock

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ChartTab",
+  "name": "charttab",
   "version": "0.0.0",
   "description": "Motivational charts on the Chrome's new tab page.",
   "license": "MIT",
