--- a/bower.json
+++ b/bower.json
@@ -2,14 +2,17 @@
   "name": "charttab",
   "version": "0.0.0",
   "dependencies": {
-    "angular-material": "1.1.9",
-    "livereload": "2.3.0",
+    "angular-material": "1.2.2",
+    "livereload": "3.3.1",
     "angular-chart.js": "1.1.1",
-    "angular-moment": "1.2.0",
-    "angular": "1.5.11",
-    "angular-animate": "1.5.11",
-    "angular-aria": "1.5.11",
-    "angular-messages": "1.5.11"
+    "angular-moment": "1.3.1",
+    "angular": "1.8.2",
+    "angular-animate": "1.8.2",
+    "angular-aria": "1.8.2",
+    "angular-messages": "1.8.2"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "resolutions": {
+    "angular": "1.8.2"
+  }
 }
